updates to about and careers pages

--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -1,9 +1,11 @@
 //colors
-$hbc-black: #000000;
+$hbc-black: #4A4A4A;
 $hbc-white: #ffffff;
 $hbc-off-white: #ffffff; // possibly #EFE7DF
 $hbc-highlight: #f15d3b;
 $hbc-border: darken(rgba($hbc-highlight, 0.12), 35%);
+$hbc-border-2: #eceaea;
+$hbc-gray-5: #fafafa;
 $hbc-gray: #777;
 $hbc-gray-2: #999;
 $hbc-gray-3: #4A4A4A;
