--- a/assets/sass/pages/_careers-page.scss
+++ b/assets/sass/pages/_careers-page.scss
@@ -38,81 +38,118 @@
         }
 	}
 
-	&__jobs {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-		max-width: $content-width;
-		margin: 0 auto 40px auto;
+	&__intro {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr;
+		width: 90%;
+		max-width: 800px;
+		margin: 50px auto;
 		animation-delay: 0.3s;
 
-		&__title {
-			margin: 40px auto;
-		    width: 100%;
-		    text-align: center;
-			text-transform: uppercase;
+		&__text {
+			text-align: center;
+			@include render-type-style(big-copy, $type-styles);
+			font-size: 18px;
 		}
+	}
+
+	&__jobs {
+        display: grid;
+		grid-template-columns: 1fr;
+		grid-auto-rows: auto;
+		grid-gap: 20px;
+		max-width: 940px;
+		margin: auto;
+		margin-bottom: 80px;
+		animation-delay: 0.3s;
 
 		&__position {
 			display: flex;
 		    flex-direction: column;
 			width: 100%;
-			padding: 40px 0;
-			margin: auto;
+			padding: 30px;
 		    text-align: center;
-		    border-bottom: solid 1px $hbc-border;
-
-		    &:first-of-type {
-		    	padding-top: 0;
-		    }
-		    
-		    &:nth-child(6) {
-		    	border: 0;
-		    }
+	        font-size: 16px;
+		    background-color: $hbc-gray-5;
 
 		    .job-title {
-		    	margin: 0 auto;
-				@include render-type-style(subhead-2, $type-styles);
+		    	margin-top: 0;
+		    	margin-bottom: 20px;
+		    	text-decoration: none;
+				@include render-type-style(subhead-1, $type-styles);
+
+				&--featured {
+					@include render-type-style(headline-2, $type-styles);
+				}
+
+		    	&__link {
+		    		color: $hbc-black;
+		    		text-decoration: none;
+
+		    		&:hover {
+		    			color: $hbc-highlight;
+		    		}
+		    	}
+		    }
+
+		    .description {
+		    	margin-top: 0;
+
+		    	&__link {
+		    		color: $hbc-black;
+			    	text-decoration: none;
+		    	}
 		    }
 
 		    .location {
-		    	margin-top: 0;
+		    	margin-top: 10px;
+
+		    	&__label {
+		    		font-weight: 600;
+		    	}
 		    }
 
 		    .view-listing {
-		    	margin: auto;
-			    margin-bottom: 0;
-		    	color: $hbc-highlight;
-				@include render-type-style(slug-1, $type-styles);
+		    	margin: 20px auto;
+				// @include render-type-style(slug-1, $type-styles);
+				color: $hbc-black;
+				font-weight: 500;
 		    	@include special-text-link();
 		    }
 		}
 
 		&__view-all {
 			text-align: center;
-			margin: 40px auto;
-		    width: 100%;
 
 			.view-all-link {
 			    display: inline-block;
 				margin: 40px auto 0 auto;
-				padding: 7px 20px;
-				color: $hbc-black;
-				border: solid 1px $hbc-black;
+				padding: 14px 35px;
+				color: $hbc-white;
+				background-color: $hbc-highlight;
+				border: solid 1px $hbc-highlight;
 				border-radius: 5px;
 				text-decoration: none;
+				text-transform: uppercase;
+				font-size: 15px;
+				font-weight: 600;
+				transition: color 150ms ease-out, border 150ms ease-out, background-color 150ms ease-out;
 
 				&:hover {
 					border-color: $hbc-highlight;
+					background-color: $hbc-white;
 					color: $hbc-highlight;
 				}
 			}
 
 			.view-all-copy {
+				font-size: 17px;
 
 				.application-link {
-					color: $hbc-highlight;
+					color: $hbc-black;
 					@include special-text-link();
+					border-color: $hbc-gray;
 				}
 				
 			}
@@ -120,40 +157,47 @@
 	}
 
 	&__perks {
-		max-width: 850px;
+		max-width: 1000px;
 		margin: auto;
 		display: grid;
-		grid-template-columns: 0.5fr 0.5fr;
+		grid-template-columns: auto auto;
 		grid-template-rows: minmax(40px, 1fr);
 		grid-gap: 20px;
 
 
 		&__title {
-			margin: 40px auto 0 auto;
+			margin: 40px auto 70px auto;
 		    width: 100%;
 		    text-align: center;
-			text-transform: uppercase;
 			grid-column: 1 / 3;
+			@include render-type-style(subhead-1, $type-styles);
+			text-transform: uppercase;
 		}
 
 		.perk {
 			text-align: center;
+			justify-self: center;
 
 			&__icon {
 				margin: auto;
 				border-radius: 50%;
+			    width: 100px;
+			    height: 100px;
 			}
 
 			&__label {
-				margin: auto;
+				margin: 20px auto;
 				padding-bottom: 20px;
+				color: $hbc-gray;
 				@include render-type-style(label-1, $type-styles);
+		        font-size: 16px;
 			}
 		}
 	}
 
 	&__tech-stack {
-		margin: 40px auto;
+		max-width: 800px;
+		margin: 40px auto 200px auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -164,12 +208,13 @@
 			margin: 40px auto 20px auto;
 		    width: 100%;
 		    text-align: center;
+			@include render-type-style(subhead-1, $type-styles);
 			text-transform: uppercase;
 		}
 
 		.tech-lang {
 			padding: 8px 12px;
-		    margin: 3px;
+		    margin: 12px 10px;
 			border-radius: 5px;
 			border: solid 1px $hbc-border;
 			text-transform: uppercase;
@@ -201,37 +246,54 @@
 			}
 		}
 
+		&__intro {
+			margin: 100px auto;
+
+			&__text {
+				font-size: 25px;
+			}
+		}
+
 		&__jobs {
-			max-width: unset;
+	        display: grid;
+			grid-template-columns: 1fr 1fr 1fr 1fr;
+			grid-template-rows: 220px 220px 220px;
+			grid-auto-rows: unset;
+			max-width: 940px;
 			
 			&__position {
-				width: calc(768px/3);
-			    border: 0;
-			    border-right: solid 1px $hbc-border;
-			    padding: 40px 20px;
-			    margin: 0;
+			    height: 100%;
+			    width: 100%;
+			    text-align: left;
 
 			    &:first-of-type {
-			    	padding-top: 40px;
+					grid-column: 1 / 3;
+				    grid-row: 1 / 3;
 			    }
 
-			    &:nth-child(6) {
-			    	border: 0;
+			    .view-listing {
+			    	margin: 20px 0;
+			    	align-self: flex-start;
 			    }
+			}
+
+			&__view-all {
+				grid-column: 1 / 5;
 			}
 		}
 
 
 		&__perks {
-			grid-template-columns: 0.5fr 0.5fr 0.5fr;
+			grid-template-columns: 1fr 1fr;
+			margin-bottom: 80px;
+
+			.perk {
+				max-width: 50%;
+			}
 
 			&__title {
-				grid-column: 1 / 4;
+				grid-column: 1 / 3;
 			}
-		}
-
-		&__tech-stack {
-			max-width: 500px;
 		}
 	}
 
