--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -20,7 +20,7 @@ $hbc-blue: #00274c;
 $hbc-colors: $hbc-green, $hbc-red, $hbc-yellow, $hbc-blue;
 
 @mixin background-gradient() {
-	background: linear-gradient(to bottom, $hbc-black, lighten($hbc-black, 30%));
+	background: linear-gradient(to bottom, #000000, lighten(#000000, 30%));
 }
 /**
  * Set up a decent box model on the root element
