--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -6,7 +6,7 @@
 		grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
 	    grid-template-rows: 1fr;
 		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
-		height: 350px;
+		height: 450px;
 		max-width: 100vw;
 	    max-height: 40vh;
 	    overflow: hidden;
@@ -49,11 +49,19 @@
 
 			&__category {
 				background-color: $hbc-white;
-				padding: 3px;
+				padding: 0 3px;
 				margin-right: 5px;
 				color: $hbc-highlight;
 			    @include render-type-style(slug-1, $type-styles);
-				@include special-text-link();
+				// @include special-text-link();
+				text-decoration: none;
+				transition: color 150ms ease-out, background-color 150ms ease-out;
+
+				&:hover {
+					background-color: $hbc-highlight;
+					color: $hbc-white;
+				}
+
 			}
 
 			&__date {
