updates to search, global header, and all page header animations

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -30,7 +30,7 @@ layout: sub-page
             </span>
         </div>
     </header>
-    <section class="article__content">
+    <section class="article__content article__content--reveal">
         
         <div class="article__content__read-time">{% include read-time.html %}</div>
         <div class="article__content__share-buttons">{% include share-buttons.html %}</div>
