--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,11 +9,12 @@
 		<ul class="link-list">
 		{% assign currentPage = page.url | replace: "/", ""%}
         {% for link in site.data.navigation.header-links %}
-          <li class="link-list__link-item">
-            <a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="link-list__link">
-                <span class="link-list__link-highlight">{{ link.title }}</span>
-            </a>
-          </li>
+            <li class="link-list__link-item">
+                <a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="link-list__link
+            {% if link.url == currentPage %}link-list__link--current{% endif %}
+            {% if paginator.page > 0 and link.title == 'Insights' %}link-list__link--current{% endif %}">
+                <span class="link-list__link-highlight">{{ link.title }}</span></a>
+            </li>
         {% endfor %}
 	    </ul>
 	</menu>
