--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -13,7 +13,7 @@
 	    height: 36px;
 	    border: 0;
 	    padding: 0;
-	    border-bottom: solid 1px $hbc-gray;
+	    border-bottom: solid 1px $hbc-highlight;
 	    background-color: transparent;
 	    transition: width 200ms ease-out;
 
@@ -24,6 +24,7 @@
 
     &__svg {
     	height: 26px;
+		fill: white;
 
     	&__icon {
     		height: 100%;
@@ -34,8 +35,10 @@
 
 	&__results {
 	    position: absolute;
+	    width: 100%;
+	    height: 0;
 	    min-width: 50vw;
-	    max-height: 80vh;
+	    // max-height: 80vh;
 	    top: 55px;
 	    right: 0px;
 	    overflow: hidden;
@@ -74,6 +77,7 @@
 	    }
 
 	    &--active {
+	    	height: auto;
 	    	background-color: white;
 	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
 	    }
@@ -93,10 +97,11 @@
 		    top: 50%;
 		    z-index: 1;
 		    transform: translateY(-50%);
-		    background: white;
+		    background: black;
 		    
 			.header-search__input {
 			    width: calc(100vw - 160px);
+			    color: white;
 			}
 	    }
     }
