--- a/assets/sass/pages/_about-page.scss
+++ b/assets/sass/pages/_about-page.scss
@@ -90,13 +90,14 @@
 			margin: 40px auto;
 		    width: 100%;
 		    text-align: center;
+			@include render-type-style(subhead-1, $type-styles);
 		}
 
 		.banner-logo--link {
 			display: flex;
 	        margin: 30px;
 		    max-height: 60px;
-		    max-width: 210px;
+		    max-width: 156px;
 		    opacity: 0.5;
 		    transition: opacity 200ms ease-out;
 
@@ -128,6 +129,7 @@
 			margin: 40px auto;
 		    width: 100%;
 		    text-align: center;
+			@include render-type-style(subhead-1, $type-styles);
 		}
 
 	    .location {
@@ -260,11 +262,15 @@
 		}
 
 		// reveal animations
+		&__intro,
+		&__photo-grid {
+			top: 200px;
+		}
+
 		&__header,
 		&__intro,
 		&__photo-grid {
 			position: relative;
-			top: 200px;
 			opacity: 0;
 
 			&--reveal {
