--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -2,6 +2,7 @@
 
 	&__header {
 		display: grid;
+		position: relative;
 	    // grid-template-columns: 1fr;
 		grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
 	    grid-template-rows: 1fr;
@@ -13,6 +14,14 @@
 	    @include background-gradient();
 	    background-blend-mode: multiply;
 
+	    &:after {
+	    	content: "";
+	    	position: absolute;
+	    	height: 100%;
+	    	width: 100%;
+	    	background: linear-gradient(rgba(0,0,0,0.2) 83%, rgba(0,0,0,0.7) 100%);
+	    }
+
 	    .header-title {
 		    grid-column: 2 / 2;
 		    grid-row: 1 / 2;
@@ -21,6 +30,7 @@
 		    margin: 10px 0 10px -2px;
 			z-index: 1;
 			align-self: end;
+			text-shadow: 0 2px 5px rgba($hbc-black, 0.5);
 			@include render-type-style(headline-2, $type-styles);
 	    }
 
@@ -30,21 +40,18 @@
 	        align-self: center;
 	        display: flex;
 	        width: 100vw;
-		    // position: relative;
-		    // left: 50%;
-		    // transform: translateX(-50%);
-	     //    width: 100%;
-	     //    min-height: 100%;
-	     //    max-width: 2880px;
 		    overflow: hidden;
-		    opacity: 0.5;
+		    // opacity: 0.5;
+		    // adding scale here so there is no visual jump when clicking through from the homepage.
+		    // the homepage hero image has a scale hover effect
+		    transform: scale(1.01);
         }
 
 		.article-meta {
 		    grid-column: 2 / 2;
 		    grid-row: 3 / 4;
-			align-self: end;
-			margin-bottom: $content-side-margins;
+		    margin-bottom: 40px;
+			// align-self: end;
 			z-index: 1;
 
 			&__category {
@@ -202,6 +209,7 @@
 		&__header {
 			grid-template-columns: minmax($content-side-margins-large, 1fr) minmax(auto, $content-width) minmax($content-side-margins-large, 1fr);
 			margin: auto ($content-side-margins-large*-1) auto ($content-side-margins-large*-1);
+		    max-height: 450px;
 
 		    .header-title {
 				@include render-type-style(headline-1, $type-styles);
@@ -269,6 +277,51 @@
 	@include media('>=large') {
 		&__header {
 			margin: auto;
+			opacity: 0;
+
+			&--reveal {
+				animation-name: reveal-article;
+				animation-duration: 0.6s;
+				animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+				animation-direction: normal;
+				animation-iteration-count: 1;
+				animation-fill-mode: forwards;
+			}
+
+			.header-title {
+				opacity: 0;
+				animation-name: fade-in-and-up;
+				animation-duration: 0.6s;
+				animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+				animation-direction: normal;
+				animation-iteration-count: 1;
+				animation-fill-mode: forwards;
+			}
+
+			.article-meta {
+				opacity: 0;
+				animation-name: fade-in-and-up;
+				animation-duration: 0.4s;
+				animation-delay: 0.2s;
+				animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+				animation-direction: normal;
+				animation-iteration-count: 1;
+				animation-fill-mode: forwards;
+			}
+		}
+
+		&__content {
+
+			&--reveal {
+				opacity: 0;
+				top: 100px;
+				animation-name: reveal-article;
+				animation-duration: 0.6s;
+				animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+				animation-direction: normal;
+				animation-iteration-count: 1;
+				animation-fill-mode: forwards;
+			}
 		}
 	}
 }
