--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -12,14 +12,24 @@
 			margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
 		    // min-height: 400px;
 			max-width: 100vw;
-		    max-height: 60vh;
+		    max-height: 450px;
 		    overflow: hidden;
 
 			&__feature-image__link {
+				position: relative;
 				display: flex;
 				grid-column: 1 / 4;
 			    grid-row: 1 / 5;
 			    overflow: hidden;
+			    background-color: black;
+
+			    &:after {
+			    	content: "";
+			    	position: absolute;
+			    	height: 100%;
+			    	width: 100%;
+			    	background: linear-gradient(rgba(0,0,0,0.2) 83%, rgba(0,0,0,0.7) 100%);
+			    }
 			}
 
 		    &__feature-image {
@@ -31,14 +41,16 @@
 			&__title {
 				grid-column: 2 / 3;
 			    grid-row: 3 / 4;
-				margin: 0 0 30px 0;
+				margin: 0;
 				@include render-type-style(headline-2, $type-styles);
 			    z-index: 1;
 
 				&__link {
-					padding: 0 10px 0 10px;
-				    box-decoration-break: clone;
-				    background-color: white;
+					color: $hbc-white;
+					text-shadow: 0 2px 5px rgba($hbc-black, 0.5);
+					// padding: 0 10px 0 10px;
+				    // box-decoration-break: clone;
+				    // background-color: white;
 					text-decoration: none;
 				
 					&:hover {
@@ -50,10 +62,37 @@
 			&__meta {
 				grid-column: 2 / 3;
 			    grid-row: 4 / 4;
-			    padding: 0 10px 0 10px;
-			    width: fit-content;
-				background-color: $hbc-white;
+			    margin-bottom: 40px;
+			 //    padding: 0 10px 0 10px;
+			 //    width: fit-content;
+				// background-color: $hbc-white;
 				z-index: 1;
+				color: white;
+
+				.meta__category-link {
+					background-color: $hbc-white;
+					padding: 0 3px;
+					margin-right: 5px;
+					color: $hbc-highlight;
+				    @include render-type-style(slug-1, $type-styles);
+					text-decoration: none;
+					transition: color 150ms ease-out, background-color 150ms ease-out;
+					border: 1px;
+
+					&:hover {
+						background-color: $hbc-highlight;
+						color: $hbc-white;
+						border: 0;
+					}
+				}
+
+				.slug-divider:after {
+					border-color: rgba($hbc-white, 0.5);
+				}
+			}
+
+			&--reveal {
+				top: 0;
 			}
 		}
 	}
@@ -253,6 +292,33 @@
 
 
 	@include media('>large') {
+
+		&__featured {
+
+			.snippet {
+
+				&__title {
+					opacity: 0;
+					animation-name: fade-in-and-up;
+					animation-duration: 0.6s;
+					animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+					animation-direction: normal;
+					animation-iteration-count: 1;
+					animation-fill-mode: forwards;
+				}
+
+				&__meta {
+					opacity: 0;
+					animation-name: fade-in-and-up;
+					animation-duration: 0.4s;
+					animation-delay: 0.2s;
+					animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+					animation-direction: normal;
+					animation-iteration-count: 1;
+					animation-fill-mode: forwards;
+				}
+			}
+		}
 
 		&__remaining {
 
