--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,6 +10,8 @@ layout: sub-page
         {% else %}
         <img class="hero-image" title="{{ page.title }}" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.image.feature }}" />
         {% endif %}
+        {% else %}
+        <span id="no-image-placeholder" class="no-image-placeholder"></span>
         {% endif %}
 
         {% if page.categories.size > 0 %}
@@ -43,9 +45,3 @@ layout: sub-page
     {% include recirc.html %}
 </article>
 
-
-<!-- {% if site.owner.disqus-shortname and page.comments == true %}
-<div id="disqus_thread"></div>
-{% include disqus.html %}
-{% endif %}
- -->
