--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -30,6 +30,11 @@
     		height: 100%;
     		width: 100%;
     	}
+
+    	&:hover {
+    		fill: $hbc-highlight;
+    		cursor: pointer;
+    	}
     }
 
 
