--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -58,16 +58,16 @@
 		    grid-column: 2 / 2;
 		    grid-row: 3 / 4;
 		    margin-bottom: 40px;
-			// align-self: end;
+	        display: flex;
+		    align-items: baseline;
 			z-index: 1;
 
 			&__category {
 				background-color: $hbc-white;
-				padding: 0 3px;
-				margin-right: 5px;
+				padding: 2px 3px;
+				margin-right: 4px;
 				color: $hbc-highlight;
 			    @include render-type-style(slug-1, $type-styles);
-				// @include special-text-link();
 				text-decoration: none;
 				transition: color 150ms ease-out, background-color 150ms ease-out;
 
@@ -77,9 +77,25 @@
 				}
 			}
 
+			&__author {
+				color: white;
+
+				&__link {
+					color: white;
+				}
+
+				&__job-title {
+
+				}
+			}
+
 			&__date {
 				color: $hbc-white;
 			    @include render-type-style(label-2, $type-styles);
+			}
+
+			.slug-divider {
+				border-color: rgba($hbc-white, 0.5);
 			}
 		}
 	}
