header layout updates

--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -1,5 +1,6 @@
 // Basic Layout
 $content-width: 1080px;
+$header-height: 80px;
 $sticky-header-height: 40px;
 $sticky-header-offset: $sticky-header-height + 10px;
 
