--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,137 +1,90 @@
 .site-header {
+    display: grid;
+    grid-auto-rows: 1fr;
+	grid-template-columns: 1fr minmax(auto, $content-width) 1fr;
+    z-index: 100;
+    background-color: rgba(0,0,0,0.8);
 
-    &__wrapper {
-	    grid-area: hd;
+    &__inner {
 	    display: grid;
+	    grid-column: 2 / 2;
 	    grid-auto-rows: 1fr;
-		grid-template-columns: 1fr 1fr 60px 1fr;
-		// grid-template-areas: "logo . search nav";
+		grid-template-columns: 105px 1fr 60px;
+		grid-template-areas: "logo nav search";
 		color: $hbc-white;
 	    z-index: 100;
 	    transition: all 100ms ease-out;
-	    width: 100%;
-	    height: 100%;
-	    background-color: black;
-    }
+	    height: 60px;
 
-    &__inner-container {
-		width: $content-width;
-    }
+		.site-header__logo {
+			position: absolute;
+		    grid-area: logo;
+		    align-self: baseline;
+		    display: block;
+			background-color: black;
+	        transition: all 200ms ease-out;
+		    height: 60px;
+	        width: 65px;
+		    padding: 0 10px;
 
-	&__logo {
-	    grid-area: logo;
-	    align-self: baseline;
-	    display: block;
-	    height: 75px;
-        width: 75px;
-		background-color: black;
-	    padding: 9px;
-        transition: all 200ms ease-out;
+			.hbc-tech-logo{
+			    height: 100%;
+			    width: 100%;
+			    pointer-events: auto;
 
-		.hbc-tech-logo{
-		    height: 100%;
-		    width: 100%;
-		    pointer-events: auto;
-
-		    &__text {
-	    	    fill: white;
-		    }
+			    &__text {
+		    	    fill: white;
+			    }
+			}
 		}
-	}
 
-   	.sticky-nav-meta {
-	    grid-area: meta;
-		display: inline-flex;
-        align-items: baseline;
-        align-self: center;
-        margin-left: 20px;
-	    opacity: 0;
-	    visibility: hidden;
-		display: none;
-		transform: translateX(20px);
-	    pointer-events: auto;
-	}
+	   	.sticky-nav-meta {
+			display: none;
+		}
+    }
 
 	// small landscape
 	@include media('>=small', '<medium', 'landscape') {
 
-	    &__logo {
-			height: 100px;
-		    width: 100px;
+	    &__inner {
+		    .site-header__logo {
+		    }
 	    }
 	}
 
    	// medium
 	@include media('>=medium') {
-		grid-template-columns: 80px 1fr 500px 60px;
-		grid-template-areas: "logo meta nav search";
 
-		&__logo {
-			height: 150px;
-		    width: 150px;
-			margin-left: 40px;
+		 &__inner {
+		 	
+		 	height: 80px;
+
+		 	.site-header__logo {
+		 		margin-left: $content-side-margins-large;
+			    height: 100px;
+		        width: 105px;
+			    padding: 0 15px;
+			}
 		}
 	}
 
    	// medium
 	@include media('>=medium', 'landscape') {
-		margin-top: 0;
-		grid-template-columns: 80px 1fr 500px 60px;
-		grid-template-areas: "logo meta nav search";
 	}
 
 
 	// large
 	@include media('>large') {
-	    border-bottom: solid 0px $hbc-border;
 
-		&__logo {
-			transition: all 200ms ease-out;
-			margin-left: 0;
-		}
+		position: absolute;
+		width: 100%;
+	    margin-bottom: 40px;
 
-	    .sticky-nav-meta {
-			transition: all 200ms ease-out;
-			display: inline-block;
-		
-		    &--show {
-		    	display: inline-flex;
-		    	opacity: 1;
-			    visibility: visible;
-		    	transform: translateX(0);
-		    }
-
-		    .meta {
-		    	&__category {
-					text-transform: uppercase;
-					color: $hbc-highlight;
-					@include render-type-style(slug-1, $type-styles);
-					@include special-text-link();
-				}
-
-				&__title {
-					@include render-type-style(subhead-3, $type-styles);
-				}
-			}
+	    &__inner {
+	    	.site-header__logo {
+		 		margin-left: 0;
+	    	}
 		}
 	}
 }
 
-.site-header--sub-page {
-	position: relative;
-
-	// large
-	@include media('>=medium') {
-        // background-color: $hbc-off-white;
-
-		.site-header__logo {
-		    height: 75px;
-	        width: 75px;
-	        margin: 0;
-		}
-		
-		// &--minified {
-	 //        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
-		// }
-	}
-}
