--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -122,7 +122,7 @@
 			grid-template-columns: 1fr;
 	    	height: auto;
 		    width: 100%;
-	    	background-color: black;
+	    	background-color: transparent;
 		    top: 0;
 		    left: 0;
 		    opacity: 1;
