--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -9,7 +9,6 @@
 		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
 		height: 450px;
 		max-width: 100vw;
-	    max-height: 40vh;
 	    overflow: hidden;
 	    @include background-gradient();
 	    background-blend-mode: multiply;
@@ -27,7 +26,7 @@
 		    grid-row: 1 / 2;
 			color: $hbc-white;
 		    line-height: 110%;
-		    margin: 10px 0 20px -2px;
+		    margin: 10px 0;
 			z-index: 1;
 			align-self: end;
 			text-shadow: 0 2px 5px rgba($hbc-black, 0.5);
@@ -41,17 +40,13 @@
 		.hero-image,
 		.no-image-placeholder {
 		    grid-column: 1 / 4;
-		    grid-row: 1 / 4;
+		    grid-row: 1 / 5;
 	        align-self: center;
-	        display: flex;
-    	    min-width: 100%;
-		    min-height: 100%;
-	        width: 100%;
-		    overflow: hidden;
-		    // opacity: 0.5;
-		    // adding scale here so there is no visual jump when clicking through from the homepage.
-		    // the homepage hero image has a scale hover effect
-		    transform: scale(1.01);
+		    // trickery to get the image to scale from the center.
+		    transform: translateX(-50%) translateY(-50%);
+		    position: absolute;
+		    left: 50%;
+		    top: 50%;
         }
 
 		.article-meta {
@@ -79,13 +74,17 @@
 
 			&__author {
 				color: white;
+				@include render-type-style(label-2, $type-styles);
 
 				&__link {
 					color: white;
+				
+					@include render-type-style(label-2, $type-styles);
+					@include special-text-link();
 				}
 
 				&__job-title {
-
+					@include render-type-style(label-2, $type-styles);
 				}
 			}
 
@@ -120,7 +119,6 @@
 		&__read-time {
 			grid-area: read-time;
 			align-self: start;
-			margin-top: 20px;
 			color: $hbc-gray;
 
 			.read-time__text-1,
@@ -206,6 +204,15 @@
 	// small portrait
 	@include media('>small', 'portrait') {
 
+		&__header {
+			.hero-image,
+			.no-image-placeholder {
+	    	    min-width: 100%;
+			    min-height: 100%;
+		        max-height: 100%;
+			}
+		}
+
 		&__content {
 
 			&__share-buttons {
@@ -223,6 +230,19 @@
 						opacity: 1;
 					}
 				}
+			}
+		}
+	}
+	
+	// small portrait
+	@include media('>small', 'landscape') {
+
+		&__header {
+			max-height: 60vh;
+			.hero-image,
+			.no-image-placeholder {
+				max-width: 100%;
+				width: 100%;
 			}
 		}
 	}
@@ -287,6 +307,8 @@
 			}
 
 			&__read-time {
+				margin-top: 20px;
+				
 				.read-time__text-1,
 				.read-time__text-2,
 				.read-time__text-3 {
@@ -331,6 +353,14 @@
 				animation-direction: normal;
 				animation-iteration-count: 1;
 				animation-fill-mode: forwards;
+			}
+
+			.hero-image,
+			.no-image-placeholder {
+				// adding scale here so there is no visual jump when clicking through from the homepage.
+			    // the homepage hero image has a scale hover effect
+			    // transform: scale(1.01);
+			    transform: translateX(-50%) translateY(-50%) scale(1.01);
 			}
 		}
 
