--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -10,7 +10,7 @@
 			grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
 			grid-template-rows: 1fr;
 			margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
-		    // min-height: 400px;
+		    height: 100vh;
 			max-width: 100vw;
 		    max-height: 450px;
 		    overflow: hidden;
@@ -38,16 +38,21 @@
 
 		    &__feature-image,
 		    &__no-image-placeholder {
-	    	    min-width: 100%;
-			    min-height: 100%;
-			    width: 100%;
 		        align-self: center;
 	            transition: transform 400ms cubic-bezier(0.2, 1, 1, 1);
+	            min-width: 100%;
+				max-height: 100%;
+    		    // trickery to get the image to scale from the center.
+			    transform: translateX(-50%) translateY(-50%);
+			    position: absolute;
+			    left: 50%;
+			    top: 50%;
 			}
 
 			&__title {
 				grid-column: 2 / 3;
 			    grid-row: 3 / 4;
+			    line-height: 110%;
 				margin: 10px 0;
 				@include render-type-style(headline-2, $type-styles);
 			    z-index: 1;
@@ -112,7 +117,7 @@
 	    border-top: solid 1px $hbc-border;
 
 		.snippet {
-			padding: 40px 0 40px 0;
+			padding: 20px 0 40px 0;
 		    border-bottom: solid 1px $hbc-border;
 
 		    &:last-child {
@@ -158,11 +163,18 @@
 	    &__featured {
 
 	    	.snippet {
-			    max-height: 80vh;
+			    max-height: 60vh;
 			    
 				.snippet__title {
 					@include render-type-style(headline-2, $type-styles);
 				}
+
+			    &__feature-image,
+			    &__no-image-placeholder {
+					min-width: unset;
+					max-height: unset;
+					max-width: 100%;
+			    }
 	    	}
 
 	    }
@@ -170,6 +182,8 @@
 		&__sub-featured {
 
 			.snippet {
+
+				padding: 20px 0 40px 0;
 				
 				&:last-child {
 				    border-bottom: 0;
@@ -190,6 +204,13 @@
 				.snippet__title {
 					@include render-type-style(headline-1, $type-styles);
 				}
+
+			    &__feature-image,
+			    &__no-image-placeholder {
+					min-width: unset;
+					max-height: unset;
+					max-width: 100%;
+			    }
 			}
 		}
 	}
@@ -251,7 +272,7 @@
         
 	        &:hover {
 	        	.snippet__feature-image {
-	        		transform: scale(1.01);
+	        		// transform: scale(1.01);
 	        	}
 	        }
 
