--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -1,14 +1,19 @@
 .header-search {
 	grid-area: search;
-	position: relative;
     display: inline-flex;
     height: 36px;
+	width: 100%;
     align-self: center;
     align-items: center;
     justify-self: end;
-    margin-right: 20px;
+
+	&__form {
+		display: grid;
+		width: 100%;
+	}
 
 	&__input {
+		justify-self: end;
 	    width: 0px;
 	    height: 36px;
 	    border: 0;
@@ -40,17 +45,17 @@
 
 	&__results {
 	    position: absolute;
-	    width: 100%;
+        left: -20px;
+	    right: 0;
+	    width: 100vw;
 	    height: 0;
 	    min-width: 50vw;
-	    // max-height: 80vh;
-	    top: 55px;
-	    right: 0px;
+	    top: 50px;
 	    overflow: hidden;
 
 	    .snippet {
     		border-bottom: solid 1px $hbc-border;
-		    padding: 20px 40px;
+		    padding: 20px 20px;
 		    top: 0;
 
 		    &:last-child {
@@ -82,33 +87,44 @@
 	    }
 
 	    &--active {
-	    	height: auto;
+	    	height: 100vh;
 	    	background-color: white;
 	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
 	    }
 	}
 
     &--active {
+		    
+		.header-search__form {
+			width: 100%;
 
-		.header-search__input {
-		    width: 210px;
+			.header-search__input {
+				width: calc(100% - 10px);
+			    margin-right: 0px;
+			    color: white;
+			}
 		}
     }
+
 	@include media('>=medium') {
+		
+		.header-search__form {
+			width: 0%;
+		}
 
 	    &--active {
-		    position: absolute;
-		    right: 0;
-		    top: 50%;
 		    z-index: 1;
-		    transform: translateY(-50%);
-		    background: black;
-		    
-			.header-search__input {
-			    width: calc(100vw - 160px);
-			    color: white;
+
+			.header-search__form {
+				position: absolute;
+		        right: 60px;
+			    width: calc(100% - 165px);
+	    
+				.header-search__input {
+				    background-color: black;
+				    width: calc(100% - 30px);
+				}
 			}
 	    }
     }
-
 }
