--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,20 +1,24 @@
 .site-header {
     display: grid;
     grid-auto-rows: 1fr;
-	grid-template-columns: 1fr minmax(auto, $content-width) 1fr;
+	grid-template-columns: minmax(20px, auto) minmax(auto, $content-width) minmax(20px, auto);
     z-index: 100;
     background-color: rgba(0,0,0,0.8);
+	position: absolute;
+	width: 100%;
+    margin-bottom: 40px;
 
     &__inner {
+    	position: relative;
 	    display: grid;
 	    grid-column: 2 / 2;
 	    grid-auto-rows: 1fr;
-		grid-template-columns: 105px 1fr 60px;
-		grid-template-areas: "logo nav search";
+		grid-template-columns: 75px 1fr 50px;
+		grid-template-areas: "logo search nav";
 		color: $hbc-white;
 	    z-index: 100;
 	    transition: all 100ms ease-out;
-	    height: 60px;
+	    height: 50px;
 
 		.site-header__logo {
 			position: absolute;
@@ -23,8 +27,8 @@
 		    display: block;
 			background-color: black;
 	        transition: all 200ms ease-out;
-		    height: 60px;
-	        width: 65px;
+		    height: 70px;
+	        width: 75px;
 		    padding: 0 10px;
 
 			.hbc-tech-logo{
@@ -56,11 +60,11 @@
 	@include media('>=medium') {
 
 		 &__inner {
-		 	
-		 	height: 80px;
+			grid-template-areas: "logo nav search";
+			grid-template-columns: 105px 1fr 50px;
 
 		 	.site-header__logo {
-		 		margin-left: $content-side-margins-large;
+		 		margin-left: $content-side-margins;
 			    height: 100px;
 		        width: 105px;
 			    padding: 0 15px;
@@ -75,10 +79,6 @@
 
 	// large
 	@include media('>large') {
-
-		position: absolute;
-		width: 100%;
-	    margin-bottom: 40px;
 
 	    &__inner {
 	    	.site-header__logo {
