minor layout tweeks, updated pagination config

--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -49,6 +49,10 @@
 				@include render-type-style(label-2, $type-styles);
 			}
 
+			&__date {
+				font-size: 14px;
+			}
+
 			&__author-link {
 				color: $hbc-highlight;
 				
