--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -10,7 +10,7 @@
     </a>
     {% endif %}
     <span class="pagination__label">Page:</span>
-    {% for page in (1..paginator.total_pages) %}
+    {% for page in (1..paginator.total_pages) limit:5 %}
         {% if page == paginator.page %}
         <span class="pagination__link pagination__link--current">{{ page }}</span>
         {% elsif page == 1 %}
