--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -8,7 +8,6 @@
     justify-self: end;
 
 	&__form {
-		display: grid;
 		width: 100%;
 	    transition: width 200ms ease-out;
 	}
@@ -18,6 +17,7 @@
 	    width: 0px;
 	    height: 36px;
 	    border: 0;
+	    border-radius: 0;
 	    padding: 0;
 	    border-bottom: solid 1px $hbc-highlight;
 	    background-color: transparent;
@@ -102,6 +102,7 @@
 		}
 
 		.header-search__form {
+			display: grid;
 			width: 100%;
 
 			.header-search__input {
