--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,4 @@
 @import '../sass/pages/about-page';
 @import '../sass/pages/careers-page';
 @import '../sass/pages/search-results';
+@import '../sass/pages/404-page';
