--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -27,6 +27,7 @@ $hbc-colors: $hbc-green, $hbc-red, $hbc-yellow, $hbc-blue;
  */
 html {
   box-sizing: border-box;
+  background-color: black;
 }
 
 /**
