--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -25,7 +25,7 @@
 	    position: absolute;
 	    top: -10px;
 	    left: -1vw;
-		fill: $hbc-border;
+		fill: rgba(255,255,255,0.25);
 	    width: 420px;
 	    transform: rotate(-2deg);
 	    padding: 0;
