--- a/assets/sass/pages/_code-page.scss
+++ b/assets/sass/pages/_code-page.scss
@@ -393,7 +393,7 @@
             margin-top: 3px;
             width: 14px;
             height: 14px;
-            background-image: url("/assets/images/repo-fork.svg");
+            background-image: url("https://saksdirect.github.io/hbc-tech-blog/assets/images/repo-fork.svg");
     }
 
     .icon-star:before {
@@ -402,7 +402,7 @@
             margin-top: 3px;
             width: 14px;
             height: 14px;
-            background-image: url("/assets/images/repo-star.svg");
+            background-image: url("https://saksdirect.github.io/hbc-tech-blog/assets/images/repo-star.svg");
             opacity: 0.5;
     }
 }
