--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -15,6 +15,7 @@ $content-side-margins: 20px;
 $content-side-margins-large: 40px;
 
 .content {
+	background-color: white;
 	margin: auto;
 	padding-right: $content-side-margins;
 	padding-left: $content-side-margins;
