--- a/assets/sass/pages/_category-page.scss
+++ b/assets/sass/pages/_category-page.scss
@@ -1,25 +1,24 @@
 // for featured categories
 .category-page {
 	display: grid;
-	grid-template-columns: 75% 25%;
+	grid-template-columns: 25% 75%;
 	grid-auto-rows: minmax(50px, auto);
 	grid-template-areas:
     "header header"
-    "articles cats"
-    "articles . "
+    "cats articles"
+    ". articles"
     "recirc recirc"
 	;
 	margin: auto;
 	
 	.articles {
-		border-right: solid 1px $hbc-border;
+		border-left: solid 1px $hbc-border;
 		margin-bottom: 80px;
 
 		.snippet {
 			border-bottom: solid 1px $hbc-border;
-			padding-left: 0px;
 			padding-bottom: 40px; 
-			margin-right: 40px;
+			margin-left: 40px;
 			margin-bottom: 40px; 
 
 			&__meta {
@@ -44,7 +43,7 @@
 
 	.asides {
 		grid-area: cats;
-		padding-left: 40px;
+		padding-right: 40px;
 		margin-bottom: 80px;
 
 		.sticky-container {
@@ -88,7 +87,6 @@
 		    margin-bottom: 0;
 
 			.snippet {
-				padding-right: 0;
 				margin-left: 0;
 			}
 		}
@@ -108,7 +106,6 @@
 			border: 0;
 
 			.snippet {
-				padding-left: 0;
 				margin-left: 0;
 				margin-right: 0;
 			}
