--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -46,13 +46,11 @@
 
 	&__results {
 		display: none;
-	    position: fixed;
+	    position: absolute;
 	    right: 0;
 	    left: 0;
-	    height: 0;
 	    top: 50px;
 	    padding-top: 40px;
-	    overflow: hidden;
 
 	    .snippet {
     		border-bottom: solid 1px $hbc-border;
@@ -60,6 +58,7 @@
 		    top: 0;
 		    max-width: $content-width;
 		    margin: auto;
+		    background-color: white;
 
 		    &:last-child {
 		    	border: 0;
@@ -90,13 +89,17 @@
 	    }
 
 	    &--active {
-	    	height: 100vh;
-	    	background-color: white;
-	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
+		    background-color: white;
+		    height: 100vh;
+		    width: 100vw;
+		    transform: translateX(-50%);
+		    left: 50%;	    	
 	    }
 	}
 
     &--active {
+		background-color: black;
+
 		.header-search__results {
 			display: block;
 		}
@@ -110,6 +113,11 @@
 			    margin-right: 0px;
 			    color: white;
 			}
+		}
+
+		//hide menu items when search opens
+		.link-list__link-item {
+		    transform: scale(0) !important;
 		}
     }
 
@@ -128,7 +136,6 @@
 			    width: calc(100% - 165px);
 	    
 				.header-search__input {
-				    background-color: black;
 				    width: calc(100% - 30px);
 				}
 			}
