--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -47,6 +47,10 @@
 		    &__link-item {
 	    		margin-bottom: 40px;
 	    		text-align: center;
+	    		// used to hide menu items when search opens
+	    		transform: scale(1);
+			    transform-origin: 100% 50%;
+			    transition: transform 150ms ease-out;
 			}
 
 	    	&__link {
