fix to displaying placeholders for posts with no images

--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -179,8 +179,8 @@
 
 			    &__feature-image,
 			    &__no-image-placeholder {
-					min-width: unset;
-					max-height: unset;
+					// min-width: unset;
+					// max-height: unset;
 					max-width: 100%;
 			    }
 	    	}
@@ -215,8 +215,8 @@
 
 			    &__feature-image,
 			    &__no-image-placeholder {
-					min-width: unset;
-					max-height: unset;
+					// min-width: unset;
+					// max-height: unset;
 					max-width: 100%;
 			    }
 			}
