--- a/assets/sass/pages/_code-page.scss
+++ b/assets/sass/pages/_code-page.scss
@@ -36,6 +36,19 @@
             opacity: 0.5;
             align-self: center;
         }
+
+        .code-page__hero-image {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            // width: 100%;
+            // min-width: 100vw;
+            max-width: 100%;
+            overflow: hidden;
+            opacity: 0.5;
+        }
     }
 
     &__projects {
