--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -6,10 +6,11 @@
     align-self: center;
     align-items: center;
     justify-self: end;
+    z-index: 10;
 
 	&__form {
 		width: 100%;
-	    transition: width 200ms ease-out;
+	    transition: width 300ms ease-out;
 	}
 
 	&__input {
@@ -21,7 +22,6 @@
 	    padding: 0;
 	    border-bottom: solid 1px $hbc-highlight;
 	    background-color: transparent;
-	    transition: width 200ms ease-out;
 
 	    &:focus {
 			outline: none;
@@ -98,7 +98,11 @@
 	}
 
     &--active {
-		background-color: black;
+		background-color: rgba(255,255,255,1);
+
+		.header-search__svg {
+			fill: $hbc-black;
+		}
 
 		.header-search__results {
 			display: block;
@@ -111,13 +115,21 @@
 			.header-search__input {
 				width: calc(100% - 10px);
 			    margin-right: 0px;
-			    color: white;
+			    color: $hbc-black;
 			}
 		}
 
 		//hide menu items when search opens
 		.link-list__link-item {
 		    transform: scale(0) !important;
+		}
+
+		// change color of menu icon when search is open
+		.navigation__menu-icon {
+
+	 		.bar {
+				stroke: $hbc-black;
+			}
 		}
     }
 
